--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "moment": "2.29.1",
     "perfect-scrollbar": "1.5.0",
     "popper.js": "1.16.1",
-    "rxjs": "6.6.3",
+    "rxjs": "^6.6.3",
     "rxjs-compat": "6.6.3",
     "web-animations-js": "2.3.2",
     "zone.js": "0.11.1"
