--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
   },
   "private": true,
   "dependencies": {
-    "@agm/core": "^1.1.0",
     "@angular/animations": "10.1.4",
     "@angular/cdk": "10.2.4",
     "@angular/common": "10.1.4",
@@ -48,8 +47,7 @@
     "popper.js": "1.16.1",
     "rxjs": "^6.6.3",
     "rxjs-compat": "6.6.3",
-    "web-animations-js": "2.3.2",
-    "zone.js": "0.11.1"
+    "web-animations-js": "2.3.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.1001.4",
