--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
     "@angular/platform-browser-dynamic": "10.1.4",
     "@angular/platform-server": "10.1.4",
     "@angular/router": "10.1.4",
-    "ajv": "6.12.5",
-    "arrive": "2.4.1",
+    "arrive": "^2.4.1",
     "bootstrap": "4.5.2",
     "bootstrap-material-design": "4.1.3",
     "bootstrap-notify": "3.1.3",
@@ -37,9 +36,6 @@
     "classlist.js": "1.1.20150312",
     "core-js": "3.6.5",
     "eslint": "^7.10.0",
-    "express": "4.17.1",
-    "file-saver": "^2.0.5",
-    "googleapis": "61.0.0",
     "hammerjs": "2.0.8",
     "jquery": "3.5.1",
     "moment": "2.29.1",
