--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "material-dashboard-angular",
+  "name": "bhaki",
   "version": "2.5.0",
-  "license": "MIT",
+
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
