--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "bhaki",
   "version": "2.5.0",
-
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -38,6 +37,7 @@
     "eslint": "^7.10.0",
     "hammerjs": "2.0.8",
     "jquery": "3.5.1",
+    "mat-table-exporter": "^15.0.0",
     "moment": "2.29.1",
     "perfect-scrollbar": "1.5.0",
     "popper.js": "1.16.1",
